--- a/SurvivalOfThe/Assets/WebGLTemplates/AirConsole/controller.html
+++ b/SurvivalOfThe/Assets/WebGLTemplates/AirConsole/controller.html
@@ -10,52 +10,59 @@
     <div id="left_side">
         <div id="action_container">
             <div id="action1"  class="button"  ontouchstart="action1()" onmousedown="action1()">
-                <div class="button_label" id="action1lbl">ACTION 1</div>
+              <div class="button_label" id="action1lbl">ACTION 1</div>
             </div>
-            <div id="action2">
-                <div class="action_label" class="button" ontouchstart="action2()" ontouchend="action2">ACTION 2</div>
+            <div id="action2" class="button" ontouchstart="action2()" onmousedown="action2()">
+              <div class="button_label" id="action2lbl">ACTION 2</div>
             </div>
         </div>
         <div id="inventory_container">
-            <div class="inventory_item">
-                <div class="inventory_label">ITEM 1</div>
+            <div class="inventory_item"   ontouchstart="itemUsed(1)" onmousedown="itemUsed(1)">
+                <div class="button_label">ITEM 1</div>
             </div>
-            <div class="inventory_item">
-                <div class="inventory_label">ITEM 2</div>
+            <div class="inventory_item"  ontouchstart="itemUsed(2)" onmousedown="itemUsed(2)">
+                <div class="button_label">ITEM 2</div>
             </div>
-            <div class="inventory_item">
-                <div class="inventory_label">ITEM 3</div>
+            <div class="inventory_item"  ontouchstart="itemUsed(3)" onmousedown="itemUsed(3)">
+                <div class="button_label">ITEM 3</div>
             </div>
-            <div class="inventory_item">
-                <div class="inventory_label">ITEM 4</div>
+            <div class="inventory_item"  ontouchstart="itemUsed(4)" onmousedown="itemUsed(4)">
+                <div class="button_label">ITEM 4</div>
             </div>
         </div>
     </div>
     <div id="right_side">
+      <div id="upper_right">
+        <div class="focus_button"  ontouchstart="requestFocus()" onmousedown="requestFocus()">
+          <div class="focus_button_label">FOCUS</div>
+        </div>
+      </div>
+      <div id="lower_right">
         <div class="container">
-            <div class="margin"></div>
-            <div class="button" ontouchstart="move('L')" ontouchend="move('S')" onmousedown="move('L')" onmouseup="move('S')">
-                <div class="button_label">LEFT</div>
-            </div>
-            <div class="margin"></div>
+          <div class="margin"></div>
+          <div class="button" ontouchstart="move('L')" ontouchend="move('S')" onmousedown="move('L')" onmouseup="move('S')">
+            <div class="button_label">LEFT</div>
+          </div>
+          <div class="margin"></div>
         </div>
         <div class="container">
-            <div class="button" ontouchstart="move('U')" ontouchend="move('S')" onmousedown="move('U')" onmouseup="move('S')">
-                <div class="button_label">UP</div>
-            </div>
-            <div class="margin"></div>
-            <div class="button" ontouchstart="move('D')" ontouchend="move('S')" onmousedown="move('D')" onmouseup="move('S')">
-                <div class="button_label">DOWN</div>
-            </div>
+          <div class="button" ontouchstart="move('U')" ontouchend="move('S')" onmousedown="move('U')" onmouseup="move('S')">
+            <div class="button_label">UP</div>
+          </div>
+          <div class="margin"></div>
+          <div class="button" ontouchstart="move('D')" ontouchend="move('S')" onmousedown="move('D')" onmouseup="move('S')">
+            <div class="button_label">DOWN</div>
+          </div>
 
         </div>
         <div class="container">
-            <div class="margin"></div>
-            <div class="button" ontouchstart="move('R')" ontouchend="move('S')" onmousedown="move('R')" onmouseup="move('S')">
-                <div class="button_label">RIGHT</div>
-            </div>
-            <div class="margin"></div>
+          <div class="margin"></div>
+          <div class="button" ontouchstart="move('R')" ontouchend="move('S')" onmousedown="move('R')" onmouseup="move('S')">
+            <div class="button_label">RIGHT</div>
+          </div>
+          <div class="margin"></div>
         </div>
+      </div>
     </div>
 </body>
 
