--- a/SurvivalOfThe/Export/screen.html
+++ b/SurvivalOfThe/Export/screen.html
@@ -76,13 +76,13 @@
     TOTAL_MEMORY: 268435456,
     errorhandler: null,			// arguments: err, url, line. This function must return 'true' if the error is handled, otherwise 'false'
     compatibilitycheck: null,
-    dataUrl: "Release/Export.data",
-    codeUrl: "Release/Export.js",
-    memUrl: "Release/Export.mem",
+    dataUrl: "Development/Export.data",
+    codeUrl: "Development/Export.js",
+    memUrl: "Development/Export.mem",
     
   };
 </script>
-<script src="Release/UnityLoader.js"></script>
+<script src="Development/UnityLoader.js"></script>
 
   </body>
 </html>
