--- a/SurvivalOfThe/Assets/Controller/controller.html
+++ b/SurvivalOfThe/Assets/Controller/controller.html
@@ -9,56 +9,56 @@
 <body onload="init()">
     <div id="left_side">
       <div id="action_container">
-        <div id="action1" class="button" ontouchstart="action1()" onmousedown="action1()">
+        <div id="action1" class="button" ontouchstart="action1()" onmousedown="action1()" style="background-image:url(btn_action.png); background-repeat: no-repeat;background-size:100% 100%;">
           <div class="button_label" id="action1lbl">Interact</div>
         </div>
-        <div id="action2" class="button" ontouchstart="action2()" onmousedown="action2()">
+        <div id="action2" class="button" ontouchstart="action2()" onmousedown="action2()" style="background-image:url(btn_action.png); background-repeat: no-repeat;background-size:100% 100%;">
           <div class="button_label" id="action2lbl"></div>
         </div>
       </div>
       <div id="inventory_container">
-        <div class="inventory_item" ontouchstart="itemUsed(1)" onmousedown="itemUsed(1)">
-          <div class="button_label">NO ITEM</div>
+        <div class="inventory_item" ontouchstart="itemUsed(1)" onmousedown="itemUsed(1)" style="background-image:url(btn_item.png); background-repeat: no-repeat;background-size:100% 100%;" >
+          <div class="button_label"></div>
         </div>
-        <div class="inventory_item" ontouchstart="itemUsed(2)" onmousedown="itemUsed(2)">
-          <div class="button_label">NO ITEM</div>
+        <div class="inventory_item" ontouchstart="itemUsed(2)" onmousedown="itemUsed(2)" style="background-image:url(btn_item.png); background-repeat: no-repeat;background-size:100% 100%;">
+          <div class="button_label"></div>
         </div>
-        <div class="inventory_item" ontouchstart="itemUsed(3)" onmousedown="itemUsed(3)">
-          <div class="button_label">NO ITEM</div>
+        <div class="inventory_item" ontouchstart="itemUsed(3)" onmousedown="itemUsed(3)" style="background-image:url(btn_item.png); background-repeat: no-repeat;background-size:100% 100%;">
+          <div class="button_label"></div>
         </div>
-        <div class="inventory_item" ontouchstart="itemUsed(4)" onmousedown="itemUsed(4)">
-          <div class="button_label">NO ITEM</div>
+        <div class="inventory_item" ontouchstart="itemUsed(4)" onmousedown="itemUsed(4)" style="background-image:url(btn_item.png); background-repeat: no-repeat;background-size:100% 100%;">
+          <div class="button_label"></div>
         </div>
       </div>
     </div>
     <div id="right_side">
       <div id="upper_right">
-        <div class="focus_button"  ontouchstart="requestFocus()" onmousedown="requestFocus()">
+        <div class="focus_button"  ontouchstart="requestFocus()" onmousedown="requestFocus()" style="background-image:url(btn_focus.png); background-repeat: no-repeat;background-size:100% 100%;">
           <div class="focus_button_label">FOCUS</div>
         </div>
       </div>
       <div id="lower_right">
         <div class="container">
           <div class="margin"></div>
-          <div class="button" ontouchstart="move('L')" ontouchend="move('S')" onmousedown="move('L')" onmouseup="move('S')">
-            <div class="button_label">LEFT</div>
+          <div class="button" ontouchstart="move('L')" ontouchend="move('S')" onmousedown="move('L')" onmouseup="move('S')" style="background-image:url(btn_left.png); background-repeat: no-repeat;background-size:100% 100%;" >
+            <div class="button_label"></div>
           </div>
           <div class="margin"></div>
         </div>
         <div class="container">
-          <div class="button" ontouchstart="move('U')" ontouchend="move('S')" onmousedown="move('U')" onmouseup="move('S')">
-            <div class="button_label">UP</div>
+          <div class="button" ontouchstart="move('U')" ontouchend="move('S')" onmousedown="move('U')" onmouseup="move('S')" style="background-image:url(btn_up.png); background-repeat: no-repeat;background-size:100% 100%;" >
+            <div class="button_label"></div>
           </div>
           <div class="margin"></div>
-          <div class="button" ontouchstart="move('D')" ontouchend="move('S')" onmousedown="move('D')" onmouseup="move('S')">
-            <div class="button_label">DOWN</div>
+          <div class="button" ontouchstart="move('D')" ontouchend="move('S')" onmousedown="move('D')" onmouseup="move('S')" style="background-image:url(btn_down.png); background-repeat: no-repeat;background-size:100% 100%;" >
+            <div class="button_label"></div>
           </div>
 
         </div>
         <div class="container">
           <div class="margin"></div>
-          <div class="button" ontouchstart="move('R')" ontouchend="move('S')" onmousedown="move('R')" onmouseup="move('S')">
-            <div class="button_label">RIGHT</div>
+          <div class="button" ontouchstart="move('R')" ontouchend="move('S')" onmousedown="move('R')" onmouseup="move('S')" style="background-image:url(btn_right.png); background-repeat: no-repeat;background-size:100% 100%;"  >
+            <div class="button_label"> </div>
           </div>
           <div class="margin"></div>
         </div>
