added IntermissionScreen and item

--- a/SurvivalOfThe/Assets/Controller/controller.html
+++ b/SurvivalOfThe/Assets/Controller/controller.html
@@ -17,16 +17,16 @@
         </div>
       </div>
       <div id="inventory_container">
-        <div class="inventory_item" ontouchstart="itemUsed(1)" onmousedown="itemUsed(1)" style="background-image:url(btn_item.png); background-repeat: no-repeat;background-size:100% 100%;" >
+        <div id="inventory_item_0" class="inventory_item" ontouchstart="itemUsed(0)" onmousedown="itemUsed(0)" style="background-image:url(btn_item.png); background-repeat: no-repeat;background-size:100% 100%;" >
           <div class="button_label"></div>
         </div>
-        <div class="inventory_item" ontouchstart="itemUsed(2)" onmousedown="itemUsed(2)" style="background-image:url(btn_item.png); background-repeat: no-repeat;background-size:100% 100%;">
+        <div id="inventory_item_1" class="inventory_item" ontouchstart="itemUsed(1)" onmousedown="itemUsed(1)" style="background-image:url(btn_item.png); background-repeat: no-repeat;background-size:100% 100%;">
           <div class="button_label"></div>
         </div>
-        <div class="inventory_item" ontouchstart="itemUsed(3)" onmousedown="itemUsed(3)" style="background-image:url(btn_item.png); background-repeat: no-repeat;background-size:100% 100%;">
+        <div id="inventory_item_2" class="inventory_item" ontouchstart="itemUsed(2)" onmousedown="itemUsed(2)" style="background-image:url(btn_item.png); background-repeat: no-repeat;background-size:100% 100%;">
           <div class="button_label"></div>
         </div>
-        <div class="inventory_item" ontouchstart="itemUsed(4)" onmousedown="itemUsed(4)" style="background-image:url(btn_item.png); background-repeat: no-repeat;background-size:100% 100%;">
+        <div id="inventory_item_3" class="inventory_item" ontouchstart="itemUsed(3)" onmousedown="itemUsed(3)" style="background-image:url(btn_item.png); background-repeat: no-repeat;background-size:100% 100%;">
           <div class="button_label"></div>
         </div>
       </div>
