prevent onmousedown/up and ontouchstart/end events to be triggered simultaneously

--- a/SurvivalOfThe/Assets/Controller/controller.html
+++ b/SurvivalOfThe/Assets/Controller/controller.html
@@ -11,55 +11,55 @@
 <body>
     <div id="left_side">
       <div id="action_container">
-        <div id="action1" class="button" ontouchstart="action1()" onmousedown="action1()">
+        <div id="action1" class="button">
           <div class="button_label" id="action1lbl">Interact</div>
         </div>
-        <div id="action2" class="button" ontouchstart="action2()" onmousedown="action2()">
+        <div id="action2" class="button">
           <div class="button_label" id="action2lbl"></div>
         </div>
       </div>
       <div id="inventory_container">
-        <div id="inventory_item_0" class="inventory_item" ontouchstart="itemUsed(0)" onmousedown="itemUsed(0)" style="background-image:url(btn_item.png); background-repeat: no-repeat;background-size:100% 100%;" >
+        <div id="inventory_item_0" class="inventory_item" style="background-image:url(btn_item.png); background-repeat: no-repeat;background-size:100% 100%;" >
           <div class="button_label"></div>
         </div>
-        <div id="inventory_item_1" class="inventory_item" ontouchstart="itemUsed(1)" onmousedown="itemUsed(1)" style="background-image:url(btn_item.png); background-repeat: no-repeat;background-size:100% 100%;">
+        <div id="inventory_item_1" class="inventory_item" style="background-image:url(btn_item.png); background-repeat: no-repeat;background-size:100% 100%;">
           <div class="button_label"></div>
         </div>
-        <div id="inventory_item_2" class="inventory_item" ontouchstart="itemUsed(2)" onmousedown="itemUsed(2)" style="background-image:url(btn_item.png); background-repeat: no-repeat;background-size:100% 100%;">
+        <div id="inventory_item_2" class="inventory_item" style="background-image:url(btn_item.png); background-repeat: no-repeat;background-size:100% 100%;">
           <div class="button_label"></div>
         </div>
-        <div id="inventory_item_3" class="inventory_item" ontouchstart="itemUsed(3)" onmousedown="itemUsed(3)" style="background-image:url(btn_item.png); background-repeat: no-repeat;background-size:100% 100%;">
+        <div id="inventory_item_3" class="inventory_item" style="background-image:url(btn_item.png); background-repeat: no-repeat;background-size:100% 100%;">
           <div class="button_label"></div>
         </div>
       </div>
     </div>
     <div id="right_side">
       <div id="upper_right">
-        <div class="focus_button" ontouchstart="requestFocus()" onmousedown="requestFocus()">
+        <div class="focus_button">
           <div class="focus_button_label">FOCUS</div>
         </div>
       </div>
       <div id="lower_right">
         <div class="container">
           <div class="margin"></div>
-          <div class="arrow arrowL" ontouchstart="move('L')" ontouchend="move('S')" onmousedown="move('L')" onmouseup="move('S')">
+          <div class="arrow arrowL">
             <div class="button_label"></div>
           </div>
           <div class="margin"></div>
         </div>
         <div class="container">
-          <div class="arrow arrowU" ontouchstart="move('U')" ontouchend="move('S')" onmousedown="move('U')" onmouseup="move('S')">
+          <div class="arrow arrowU">
             <div class="button_label"></div>
           </div>
           <div class="margin"></div>
-          <div class="arrow arrowD" ontouchstart="move('D')" ontouchend="move('S')" onmousedown="move('D')" onmouseup="move('S')">
+          <div class="arrow arrowD">
             <div class="button_label"></div>
           </div>
 
         </div>
         <div class="container">
           <div class="margin"></div>
-          <div class="arrow arrowR" ontouchstart="move('R')" ontouchend="move('S')" onmousedown="move('R')" onmouseup="move('S')">
+          <div class="arrow arrowR">
             <div class="button_label"> </div>
           </div>
           <div class="margin"></div>
