indicate player color in controller

--- a/SurvivalOfThe/Assets/Controller/controller.html
+++ b/SurvivalOfThe/Assets/Controller/controller.html
@@ -51,11 +51,10 @@
           <div class="arrow arrowU">
             <div class="button_label"></div>
           </div>
-          <div class="margin"></div>
+          <div class="margin color"></div>
           <div class="arrow arrowD">
             <div class="button_label"></div>
           </div>
-
         </div>
         <div class="container">
           <div class="margin"></div>
