--- a/SurvivalOfThe/Assets/WebGLTemplates/AirConsole/controller.html
+++ b/SurvivalOfThe/Assets/WebGLTemplates/AirConsole/controller.html
@@ -3,8 +3,10 @@
 <head>
     <script type="text/javascript" src="//www.airconsole.com/api/airconsole-1.7.0.js"></script>
 	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script type="text/javascript" src="dpad/dpad.js"></script>
 	<script type="text/javascript" src="rate-limiter.js"></script>
     <script type="text/javascript" src="script.js"></script>
+	<link rel="stylesheet" href="dpad/dpad.css">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
@@ -40,6 +42,7 @@
         </div>
       </div>
       <div id="lower_right">
+	   <div>
         <div class="container">
           <div class="margin"></div>
           <div class="arrow arrowL">
@@ -59,10 +62,11 @@
         <div class="container">
           <div class="margin"></div>
           <div class="arrow arrowR">
-            <div class="button_label"> </div>
+            <div class="button_label"></div>
           </div>
           <div class="margin"></div>
         </div>
+	   </div>
       </div>
     </div>
 	<div id="please_wait"><p>Please wait...</p></div>
