vibrate/sound at vote end, infobox duration depending on text length, fixed aspect ration of items in controller

--- a/SurvivalOfThe/Assets/Controller/controller.html
+++ b/SurvivalOfThe/Assets/Controller/controller.html
@@ -21,16 +21,16 @@
         </div>
       </div>
       <div id="inventory_container">
-        <div id="inventory_item_0" class="inventory_item" style="background-image:url(btn_item.png); background-repeat: no-repeat;background-size:100% 100%;" >
+        <div id="inventory_item_0" class="inventory_item" style="background-image:url(btn_item.png);" >
           <div class="button_label"></div>
         </div>
-        <div id="inventory_item_1" class="inventory_item" style="background-image:url(btn_item.png); background-repeat: no-repeat;background-size:100% 100%;">
+        <div id="inventory_item_1" class="inventory_item" style="background-image:url(btn_item.png);">
           <div class="button_label"></div>
         </div>
-        <div id="inventory_item_2" class="inventory_item" style="background-image:url(btn_item.png); background-repeat: no-repeat;background-size:100% 100%;">
+        <div id="inventory_item_2" class="inventory_item" style="background-image:url(btn_item.png);">
           <div class="button_label"></div>
         </div>
-        <div id="inventory_item_3" class="inventory_item" style="background-image:url(btn_item.png); background-repeat: no-repeat;background-size:100% 100%;">
+        <div id="inventory_item_3" class="inventory_item" style="background-image:url(btn_item.png);">
           <div class="button_label"></div>
         </div>
       </div>
